# social-ai-reply

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  check_config.py  check_db.py  check_subreddits.py  check_subreddits_115.py  check_uid.py  check_users_schema.py  nixpacks.toml  pyproject.toml  railway.toml  test_auth_me.py  test_db_project.py  test_db_user.py  test_llm.py  test_register.py  test_register2.py  test_register_internal.py
app/: main.py
app/api/v1/: deps.py
app/core/: __init__.py  config.py  exceptions.py
app/core/constants/: __init__.py  app.py
app/db/: __init__.py  run_migrations.py  schema_v2.sql
app/db/migrations/: 001_multi_agent_platform.sql  20260617_01_fix_missing_schema.sql  20260617_01_fix_personas_activity_logs.sql  20260619_01_add_source_type.sql  20260624_01_competitor_mentions.sql  20260624_02_user_api_keys.sql  20260624_03_add_last_analyzed_at.sql  20260624_04_add_keyword_category.sql
app/db/tables/: __init__.py  agent_runs.py  analytics_events.py  brand_keywords.py  company.py  competitors.py  content.py  discovery.py  feedback.py  integrations.py  projects.py  sources.py  system.py  user_keys.py  users.py  voice_profiles.py  (+1 more)
app/models/: __init__.py
app/services/: __init__.py
app/utils/: encryption.py
scratch/: test_chat.py  test_draft.py  test_draft_reply_e2e.py  test_extract.py  test_http_chat.py  test_insta_e2e.py  test_insta_e2e_debug.py  test_insta_e2e_error.py  test_insta_e2e_true_debug.py  test_insta_e2e_true_debug2.py  test_insta_e2e_true_debug3.py  test_json_openai.py  test_llms.py  test_openai_text.py  test_pydantic.py  test_pydantic_agent.py  test_rapid.py  test_reply.py  test_reply_openai.py
scripts/: run_backend.bat  run_frontend.bat  setup.sh
supabase/: config.toml
supabase/migrations/: 00000000000000_initial_schema.sql  20260617145444_fix_missing_schema.sql  20260618_add_status_to_projects.sql  20260618_comprehensive_schema_fix.sql
tests/: conftest.py
tests/api/: test_auth.py  test_auto_pipeline.py
tests/unit/: test_account_safety.py  test_draft_safety.py  test_embedding_service.py  test_intent_classifier.py  test_keyword_expansion.py  test_pipeline_service.py  test_reddit_search.py  test_relevance_v2.py  test_scanner_service.py
web/: .env.example  .env.local.example  package-lock.json  package.json
web/app/: layout.tsx
web/hooks/: use-discovery-data.ts  use-draft-ops.ts  use-scan-runner.ts
web/lib/: api.ts  opportunity.ts  project.ts  reddit.ts
web/stores/: auth-store.ts
(+150 files in other folders)
